fix: dropdown menu on mobile chart

--- a/styles/components/_price-chart.scss
+++ b/styles/components/_price-chart.scss
@@ -90,3 +90,10 @@
   }
 
 }
+
+@include touch {
+  .common-price-chart .time-range-dropdown .dropdown-menu{
+    display: flex;
+    justify-content: center;
+  }
+}
